--- a/.github/workflows/update-news.yml
+++ b/.github/workflows/update-news.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node LTS
         uses: actions/setup-node@v3
         with:
-          node-version: lts
+          node-version: 18.x
 
       - name: Install dependencies
         run: yarn install
