--- a/.github/workflows/check-news.yml
+++ b/.github/workflows/check-news.yml
@@ -31,7 +31,7 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           message: 'chore: 🤖 Update news'
-          committer_name: GitHub Actions
-          committer_email: actions@github.com
+          author_name: GitHub Actions
+          author_email: actions@github.com
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
